src/Resources/public/src/scss/_c4g-brick-check.scss
.c4g__form-check {
  @extend .form-check;
}

.c4g__form-check-input {
  @extend .form-check-input;
}

.c4g__form-label-multicheckbox {
  @extend .form-check-label;
}

.c4g__form-check-label {
  @extend .form-check-label;
}

.c4g__form-switch {
  @extend .form-switch;
}

